--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"headhesive": "^1.2.4",
 		"jquery": "^3.6.0",
 		"jquery-mask-plugin": "^1.14.16",
+		"nouislider": "^15.1.1",
 		"popper.js": "^1.16.1"
 	}
 }
